--- a/client/index.css
+++ b/client/index.css
@@ -1,8 +1,8 @@
 :root{
-    --primary-100: #cfe0e8;
-    --primary-200: #b7d7e8;
-    --primary-300: #87bdd8;
-    --secondary: #daebe8;
+    --primary-100: ;
+    --primary-200: ;
+    --primary-300: ;
+    --secondary: ;
 }
 
 input{
