--- a/client/index.css
+++ b/client/index.css
@@ -1,3 +1,7 @@
+#root {
+    min-height: 100vh;
+}
+  
 :root{
     --primary-100: ;
     --primary-200: ;
@@ -59,4 +63,10 @@ input{
 
 .bg-primary-300 {
     background-color: var(--primary-300)
+}
+
+@media (max-width: 768px) {
+    #root {
+      min-height: 92vh;
+    }
 }
